cmake_minimum_required(VERSION 3.20)
project(A00)

set(CMAKE_CXX_STANDARD 17)

include_directories(.)
include_directories(headers)
include_directories(headers/glm)
include_directories(headers/glm/detail)
include_directories(headers/glm/ext)
include_directories(headers/glm/gtc)
include_directories(headers/glm/gtx)
include_directories(headers/glm/simd)

add_executable(A00
        headers/glm/detail/_features.hpp
        headers/glm/detail/_fixes.hpp
        headers/glm/detail/_noise.hpp
        headers/glm/detail/_swizzle.hpp
        headers/glm/detail/_swizzle_func.hpp
        headers/glm/detail/_vectorize.hpp
        headers/glm/detail/compute_common.hpp
        headers/glm/detail/compute_vector_relational.hpp
        headers/glm/detail/func_common.inl
        headers/glm/detail/func_common_simd.inl
        headers/glm/detail/func_exponential.inl
        headers/glm/detail/func_exponential_simd.inl
        headers/glm/detail/func_geometric.inl
        headers/glm/detail/func_geometric_simd.inl
        headers/glm/detail/func_integer.inl
        headers/glm/detail/func_integer_simd.inl
        headers/glm/detail/func_matrix.inl
        headers/glm/detail/func_matrix_simd.inl
        headers/glm/detail/func_packing.inl
        headers/glm/detail/func_packing_simd.inl
        headers/glm/detail/func_trigonometric.inl
        headers/glm/detail/func_trigonometric_simd.inl
        headers/glm/detail/func_vector_relational.inl
        headers/glm/detail/func_vector_relational_simd.inl
        headers/glm/detail/glm.cpp
        headers/glm/detail/qualifier.hpp
        headers/glm/detail/setup.hpp
        headers/glm/detail/type_float.hpp
        headers/glm/detail/type_half.hpp
        headers/glm/detail/type_half.inl
        headers/glm/detail/type_mat2x2.hpp
        headers/glm/detail/type_mat2x2.inl
        headers/glm/detail/type_mat2x3.hpp
        headers/glm/detail/type_mat2x3.inl
        headers/glm/detail/type_mat2x4.hpp
        headers/glm/detail/type_mat2x4.inl
        headers/glm/detail/type_mat3x2.hpp
        headers/glm/detail/type_mat3x2.inl
        headers/glm/detail/type_mat3x3.hpp
        headers/glm/detail/type_mat3x3.inl
        headers/glm/detail/type_mat3x4.hpp
        headers/glm/detail/type_mat3x4.inl
        headers/glm/detail/type_mat4x2.hpp
        headers/glm/detail/type_mat4x2.inl
        headers/glm/detail/type_mat4x3.hpp
        headers/glm/detail/type_mat4x3.inl
        headers/glm/detail/type_mat4x4.hpp
        headers/glm/detail/type_mat4x4.inl
        headers/glm/detail/type_mat4x4_simd.inl
        headers/glm/detail/type_quat.hpp
        headers/glm/detail/type_quat.inl
        headers/glm/detail/type_quat_simd.inl
        headers/glm/detail/type_vec1.hpp
        headers/glm/detail/type_vec1.inl
        headers/glm/detail/type_vec2.hpp
        headers/glm/detail/type_vec2.inl
        headers/glm/detail/type_vec3.hpp
        headers/glm/detail/type_vec3.inl
        headers/glm/detail/type_vec4.hpp
        headers/glm/detail/type_vec4.inl
        headers/glm/detail/type_vec4_simd.inl
        headers/glm/ext/matrix_clip_space.hpp
        headers/glm/ext/matrix_clip_space.inl
        headers/glm/ext/matrix_common.hpp
        headers/glm/ext/matrix_common.inl
        headers/glm/ext/matrix_double2x2.hpp
        headers/glm/ext/matrix_double2x2_precision.hpp
        headers/glm/ext/matrix_double2x3.hpp
        headers/glm/ext/matrix_double2x3_precision.hpp
        headers/glm/ext/matrix_double2x4.hpp
        headers/glm/ext/matrix_double2x4_precision.hpp
        headers/glm/ext/matrix_double3x2.hpp
        headers/glm/ext/matrix_double3x2_precision.hpp
        headers/glm/ext/matrix_double3x3.hpp
        headers/glm/ext/matrix_double3x3_precision.hpp
        headers/glm/ext/matrix_double3x4.hpp
        headers/glm/ext/matrix_double3x4_precision.hpp
        headers/glm/ext/matrix_double4x2.hpp
        headers/glm/ext/matrix_double4x2_precision.hpp
        headers/glm/ext/matrix_double4x3.hpp
        headers/glm/ext/matrix_double4x3_precision.hpp
        headers/glm/ext/matrix_double4x4.hpp
        headers/glm/ext/matrix_double4x4_precision.hpp
        headers/glm/ext/matrix_float2x2.hpp
        headers/glm/ext/matrix_float2x2_precision.hpp
        headers/glm/ext/matrix_float2x3.hpp
        headers/glm/ext/matrix_float2x3_precision.hpp
        headers/glm/ext/matrix_float2x4.hpp
        headers/glm/ext/matrix_float2x4_precision.hpp
        headers/glm/ext/matrix_float3x2.hpp
        headers/glm/ext/matrix_float3x2_precision.hpp
        headers/glm/ext/matrix_float3x3.hpp
        headers/glm/ext/matrix_float3x3_precision.hpp
        headers/glm/ext/matrix_float3x4.hpp
        headers/glm/ext/matrix_float3x4_precision.hpp
        headers/glm/ext/matrix_float4x2.hpp
        headers/glm/ext/matrix_float4x2_precision.hpp
        headers/glm/ext/matrix_float4x3.hpp
        headers/glm/ext/matrix_float4x3_precision.hpp
        headers/glm/ext/matrix_float4x4.hpp
        headers/glm/ext/matrix_float4x4_precision.hpp
        headers/glm/ext/matrix_projection.hpp
        headers/glm/ext/matrix_projection.inl
        headers/glm/ext/matrix_relational.hpp
        headers/glm/ext/matrix_relational.inl
        headers/glm/ext/matrix_transform.hpp
        headers/glm/ext/matrix_transform.inl
        headers/glm/ext/quaternion_common.hpp
        headers/glm/ext/quaternion_common.inl
        headers/glm/ext/quaternion_common_simd.inl
        headers/glm/ext/quaternion_double.hpp
        headers/glm/ext/quaternion_double_precision.hpp
        headers/glm/ext/quaternion_exponential.hpp
        headers/glm/ext/quaternion_exponential.inl
        headers/glm/ext/quaternion_float.hpp
        headers/glm/ext/quaternion_float_precision.hpp
        headers/glm/ext/quaternion_geometric.hpp
        headers/glm/ext/quaternion_geometric.inl
        headers/glm/ext/quaternion_relational.hpp
        headers/glm/ext/quaternion_relational.inl
        headers/glm/ext/quaternion_transform.hpp
        headers/glm/ext/quaternion_transform.inl
        headers/glm/ext/quaternion_trigonometric.hpp
        headers/glm/ext/quaternion_trigonometric.inl
        headers/glm/ext/scalar_common.hpp
        headers/glm/ext/scalar_common.inl
        headers/glm/ext/scalar_constants.hpp
        headers/glm/ext/scalar_constants.inl
        headers/glm/ext/scalar_int_sized.hpp
        headers/glm/ext/scalar_relational.hpp
        headers/glm/ext/scalar_relational.inl
        headers/glm/ext/scalar_uint_sized.hpp
        headers/glm/ext/scalar_ulp.hpp
        headers/glm/ext/scalar_ulp.inl
        headers/glm/ext/vector_bool1.hpp
        headers/glm/ext/vector_bool1_precision.hpp
        headers/glm/ext/vector_bool2.hpp
        headers/glm/ext/vector_bool2_precision.hpp
        headers/glm/ext/vector_bool3.hpp
        headers/glm/ext/vector_bool3_precision.hpp
        headers/glm/ext/vector_bool4.hpp
        headers/glm/ext/vector_bool4_precision.hpp
        headers/glm/ext/vector_common.hpp
        headers/glm/ext/vector_common.inl
        headers/glm/ext/vector_double1.hpp
        headers/glm/ext/vector_double1_precision.hpp
        headers/glm/ext/vector_double2.hpp
        headers/glm/ext/vector_double2_precision.hpp
        headers/glm/ext/vector_double3.hpp
        headers/glm/ext/vector_double3_precision.hpp
        headers/glm/ext/vector_double4.hpp
        headers/glm/ext/vector_double4_precision.hpp
        headers/glm/ext/vector_float1.hpp
        headers/glm/ext/vector_float1_precision.hpp
        headers/glm/ext/vector_float2.hpp
        headers/glm/ext/vector_float2_precision.hpp
        headers/glm/ext/vector_float3.hpp
        headers/glm/ext/vector_float3_precision.hpp
        headers/glm/ext/vector_float4.hpp
        headers/glm/ext/vector_float4_precision.hpp
        headers/glm/ext/vector_int1.hpp
        headers/glm/ext/vector_int1_precision.hpp
        headers/glm/ext/vector_int2.hpp
        headers/glm/ext/vector_int2_precision.hpp
        headers/glm/ext/vector_int3.hpp
        headers/glm/ext/vector_int3_precision.hpp
        headers/glm/ext/vector_int4.hpp
        headers/glm/ext/vector_int4_precision.hpp
        headers/glm/ext/vector_relational.hpp
        headers/glm/ext/vector_relational.inl
        headers/glm/ext/vector_uint1.hpp
        headers/glm/ext/vector_uint1_precision.hpp
        headers/glm/ext/vector_uint2.hpp
        headers/glm/ext/vector_uint2_precision.hpp
        headers/glm/ext/vector_uint3.hpp
        headers/glm/ext/vector_uint3_precision.hpp
        headers/glm/ext/vector_uint4.hpp
        headers/glm/ext/vector_uint4_precision.hpp
        headers/glm/ext/vector_ulp.hpp
        headers/glm/ext/vector_ulp.inl
        headers/glm/gtc/bitfield.hpp
        headers/glm/gtc/bitfield.inl
        headers/glm/gtc/color_space.hpp
        headers/glm/gtc/color_space.inl
        headers/glm/gtc/constants.hpp
        headers/glm/gtc/constants.inl
        headers/glm/gtc/epsilon.hpp
        headers/glm/gtc/epsilon.inl
        headers/glm/gtc/integer.hpp
        headers/glm/gtc/integer.inl
        headers/glm/gtc/matrix_access.hpp
        headers/glm/gtc/matrix_access.inl
        headers/glm/gtc/matrix_integer.hpp
        headers/glm/gtc/matrix_inverse.hpp
        headers/glm/gtc/matrix_inverse.inl
        headers/glm/gtc/matrix_transform.hpp
        headers/glm/gtc/matrix_transform.inl
        headers/glm/gtc/noise.hpp
        headers/glm/gtc/noise.inl
        headers/glm/gtc/packing.hpp
        headers/glm/gtc/packing.inl
        headers/glm/gtc/quaternion.hpp
        headers/glm/gtc/quaternion.inl
        headers/glm/gtc/quaternion_simd.inl
        headers/glm/gtc/random.hpp
        headers/glm/gtc/random.inl
        headers/glm/gtc/reciprocal.hpp
        headers/glm/gtc/reciprocal.inl
        headers/glm/gtc/round.hpp
        headers/glm/gtc/round.inl
        headers/glm/gtc/type_aligned.hpp
        headers/glm/gtc/type_precision.hpp
        headers/glm/gtc/type_precision.inl
        headers/glm/gtc/type_ptr.hpp
        headers/glm/gtc/type_ptr.inl
        headers/glm/gtc/ulp.hpp
        headers/glm/gtc/ulp.inl
        headers/glm/gtc/vec1.hpp
        headers/glm/gtx/associated_min_max.hpp
        headers/glm/gtx/associated_min_max.inl
        headers/glm/gtx/bit.hpp
        headers/glm/gtx/bit.inl
        headers/glm/gtx/closest_point.hpp
        headers/glm/gtx/closest_point.inl
        headers/glm/gtx/color_encoding.hpp
        headers/glm/gtx/color_encoding.inl
        headers/glm/gtx/color_space.hpp
        headers/glm/gtx/color_space.inl
        headers/glm/gtx/color_space_YCoCg.hpp
        headers/glm/gtx/color_space_YCoCg.inl
        headers/glm/gtx/common.hpp
        headers/glm/gtx/common.inl
        headers/glm/gtx/compatibility.hpp
        headers/glm/gtx/compatibility.inl
        headers/glm/gtx/component_wise.hpp
        headers/glm/gtx/component_wise.inl
        headers/glm/gtx/dual_quaternion.hpp
        headers/glm/gtx/dual_quaternion.inl
        headers/glm/gtx/easing.hpp
        headers/glm/gtx/easing.inl
        headers/glm/gtx/euler_angles.hpp
        headers/glm/gtx/euler_angles.inl
        headers/glm/gtx/extend.hpp
        headers/glm/gtx/extend.inl
        headers/glm/gtx/extended_min_max.hpp
        headers/glm/gtx/extended_min_max.inl
        headers/glm/gtx/exterior_product.hpp
        headers/glm/gtx/exterior_product.inl
        headers/glm/gtx/fast_exponential.hpp
        headers/glm/gtx/fast_exponential.inl
        headers/glm/gtx/fast_square_root.hpp
        headers/glm/gtx/fast_square_root.inl
        headers/glm/gtx/fast_trigonometry.hpp
        headers/glm/gtx/fast_trigonometry.inl
        headers/glm/gtx/float_notmalize.inl
        headers/glm/gtx/functions.hpp
        headers/glm/gtx/functions.inl
        headers/glm/gtx/gradient_paint.hpp
        headers/glm/gtx/gradient_paint.inl
        headers/glm/gtx/handed_coordinate_space.hpp
        headers/glm/gtx/handed_coordinate_space.inl
        headers/glm/gtx/hash.hpp
        headers/glm/gtx/hash.inl
        headers/glm/gtx/integer.hpp
        headers/glm/gtx/integer.inl
        headers/glm/gtx/intersect.hpp
        headers/glm/gtx/intersect.inl
        headers/glm/gtx/io.hpp
        headers/glm/gtx/io.inl
        headers/glm/gtx/log_base.hpp
        headers/glm/gtx/log_base.inl
        headers/glm/gtx/matrix_cross_product.hpp
        headers/glm/gtx/matrix_cross_product.inl
        headers/glm/gtx/matrix_decompose.hpp
        headers/glm/gtx/matrix_decompose.inl
        headers/glm/gtx/matrix_factorisation.hpp
        headers/glm/gtx/matrix_factorisation.inl
        headers/glm/gtx/matrix_interpolation.hpp
        headers/glm/gtx/matrix_interpolation.inl
        headers/glm/gtx/matrix_major_storage.hpp
        headers/glm/gtx/matrix_major_storage.inl
        headers/glm/gtx/matrix_operation.hpp
        headers/glm/gtx/matrix_operation.inl
        headers/glm/gtx/matrix_query.hpp
        headers/glm/gtx/matrix_query.inl
        headers/glm/gtx/matrix_transform_2d.hpp
        headers/glm/gtx/matrix_transform_2d.inl
        headers/glm/gtx/mixed_product.hpp
        headers/glm/gtx/mixed_product.inl
        headers/glm/gtx/norm.hpp
        headers/glm/gtx/norm.inl
        headers/glm/gtx/normal.hpp
        headers/glm/gtx/normal.inl
        headers/glm/gtx/normalize_dot.hpp
        headers/glm/gtx/normalize_dot.inl
        headers/glm/gtx/number_precision.hpp
        headers/glm/gtx/number_precision.inl
        headers/glm/gtx/optimum_pow.hpp
        headers/glm/gtx/optimum_pow.inl
        headers/glm/gtx/orthonormalize.hpp
        headers/glm/gtx/orthonormalize.inl
        headers/glm/gtx/perpendicular.hpp
        headers/glm/gtx/perpendicular.inl
        headers/glm/gtx/polar_coordinates.hpp
        headers/glm/gtx/polar_coordinates.inl
        headers/glm/gtx/projection.hpp
        headers/glm/gtx/projection.inl
        headers/glm/gtx/quaternion.hpp
        headers/glm/gtx/quaternion.inl
        headers/glm/gtx/range.hpp
        headers/glm/gtx/raw_data.hpp
        headers/glm/gtx/raw_data.inl
        headers/glm/gtx/rotate_normalized_axis.hpp
        headers/glm/gtx/rotate_normalized_axis.inl
        headers/glm/gtx/rotate_vector.hpp
        headers/glm/gtx/rotate_vector.inl
        headers/glm/gtx/scalar_multiplication.hpp
        headers/glm/gtx/scalar_relational.hpp
        headers/glm/gtx/scalar_relational.inl
        headers/glm/gtx/spline.hpp
        headers/glm/gtx/spline.inl
        headers/glm/gtx/std_based_type.hpp
        headers/glm/gtx/std_based_type.inl
        headers/glm/gtx/string_cast.hpp
        headers/glm/gtx/string_cast.inl
        headers/glm/gtx/texture.hpp
        headers/glm/gtx/texture.inl
        headers/glm/gtx/transform.hpp
        headers/glm/gtx/transform.inl
        headers/glm/gtx/transform2.hpp
        headers/glm/gtx/transform2.inl
        headers/glm/gtx/type_aligned.hpp
        headers/glm/gtx/type_aligned.inl
        headers/glm/gtx/type_trait.hpp
        headers/glm/gtx/type_trait.inl
        headers/glm/gtx/vec_swizzle.hpp
        headers/glm/gtx/vector_angle.hpp
        headers/glm/gtx/vector_angle.inl
        headers/glm/gtx/vector_query.hpp
        headers/glm/gtx/vector_query.inl
        headers/glm/gtx/wrap.hpp
        headers/glm/gtx/wrap.inl
        headers/glm/simd/platform.h
        headers/glm/common.hpp
        headers/glm/exponential.hpp
        headers/glm/ext.hpp
        headers/glm/fwd.hpp
        headers/glm/geometric.hpp
        headers/glm/glm.hpp
        headers/glm/integer.hpp
        headers/glm/mat2x2.hpp
        headers/glm/mat2x3.hpp
        headers/glm/mat2x4.hpp
        headers/glm/mat3x2.hpp
        headers/glm/mat3x3.hpp
        headers/glm/mat3x4.hpp
        headers/glm/mat4x2.hpp
        headers/glm/mat4x3.hpp
        headers/glm/mat4x4.hpp
        headers/glm/matrix.hpp
        headers/glm/packing.hpp
        headers/glm/trigonometric.hpp
        headers/glm/vec2.hpp
        headers/glm/vec3.hpp
        headers/glm/vec4.hpp
        headers/glm/vector_relational.hpp
        headers/json.hpp
        headers/stb_image.h
        headers/stb_image_write.h
        headers/tiny_gltf.h
        headers/tiny_obj_loader.h
        A00.cpp
        Starter.hpp
        TextMaker.hpp)
